doc add bearer
